# forfreeter

./: DEVELOPERS.md  README.md  cabal.project  default.nix  forfreeter.cabal  haskell-pkgs.nix  shell.nix
.github/workflows/: haskell-nix.yml
src/: Instance.hs
src/Forfreeter/: Instance.hs
test/: InstanceSpec.hs  Main.hs
