cabal-version: 2.1

name:           forfreeter
version:        0.1.0.0
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/symphony-org/forfreeter

library
  exposed-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
